# basicStudyC

./: CMakeLists.txt
basic/: convertEncoding.sh  linkSource.c
basic/Chapter01/lecture11/: sec01strings1.c  sec01strings2.c  sec01strings4.c  sec01strings5.c
basic/Chapter01/lecture12/: sec01globalVariable.c  sec03staticVariable.c  sec04registerVariable.c
basic/Chapter01/lecture13/: sec01multiArray2.c  sec02pointeriArray2.c  sec02pointeriArray3.c  sec02pointeriArray4.c  sec02pointeriArray6.c
basic/Chapter01/lecture14/: sec01dynamicMemFunc01.c  sec01dynamicMemFunc02.c  sec02dynamicMemStr01.c  sec02dynamicMemStr02.c
basic/Chapter01/lecture16/: sec01structure5.c
basic/Chapter01/lecture17/: sec01fileIO1.c  sec01fileIO2.c
basic/Chapter02/lecture19/: sec01dataStructureIntro.c
basic/Chapter02/lecture20/: sec01ArrayList.c  sec02LinkedList1.c  sec02LinkedList2.c
basic/Chapter02/lecture21/: sec01twoWayLinkedList.c
basic/Chapter02/lecture22/: sec01stack1.c  sec01stack2.c
basic/Chapter02/lecture23/: sec01calculatorUseStack.c
basic/Chapter02/lecture24/: sec01queue1.c  sec01queue2.c
basic/Chapter02/lecture25/: sec01selectionSort.c  sec02insertionSort.c
basic/Chapter02/lecture26/: sec01quickSort.c
basic/Chapter02/lecture27/: sec01countingSort.c
basic/Chapter02/lecture28/: sec01radixSort.c
basic/Chapter02/lecture29/: sec01binaryTree.c
basic/Chapter02/lecture30/: sec01binaryTreeImpl.c  sec02binaryTreeTraversal.c
basic/Chapter02/lecture31/: sec01priorityQueue.c
basic/Chapter02/lecture32/: sec01sequentialSearch.c  sec02binarySearch.c
basic/Chapter02/lecture33/: sec01graph1.c  sec01graph2.c
basic/Chapter02/lecture34/: sec01depthFirstSearch.c
basic/Chapter02/lecture35/: sec01breadthFirstSearch.c
basic/Chapter02/lecture36/: sec01binarySearch1.c  sec01binarySearch2.c  sec01binarySearch3.c
basic/Chapter02/lecture37/: sec01AVLTree.c
basic/lecture11/: sec01strings3.c  sec01strings4.c  sec01strings5.c
basic/lecture12/: sec00intro.c  sec01globalVariable.c  sec02localVariable.c  sec03staticVariable.c  sec04registerVariable.c  sec05howToControlParameters.c
basic/lecture13/: sec01multiArray1.c  sec01multiArray2.c  sec02pointeriArray1.c  sec02pointeriArray2.c  sec02pointeriArray3.c  sec02pointeriArray4.c  sec02pointeriArray5.c  sec02pointeriArray6.c
basic/lecture14/: sec00intro.c  sec01dynamicMemFunc01.c  sec01dynamicMemFunc02.c  sec02dynamicMemStr01.c  sec02dynamicMemStr02.c
basic/lecture15/: sec01funcPointer1.c  sec01funcPointer2.c  sec01funcPointer3.c  sec01funcPointer4.c
basic/lecture16/: sec01structure1.c  sec01structure2.c  sec01structure3.c  sec01structure4.c  sec01structure5.c  sec02structurePointer.c
basic/lecture17/: sec01fileIO3.c  sec01fileIO4.c
