cmake_minimum_required(VERSION 3.13)
project(basicStudyC)

set(CMAKE_CXX_STANDARD 14)

add_executable(basicStudyC
        #basic/lecture11/sec01strings1.c
        #basic/lecture11/sec01strings2.c
        #basic/lecture11/sec01strings3.c
        #basic/lecture11/sec01strings4.c
        #basic/lecture11/sec01strings5.c
        #basic/lecture12/sec01globalVariable.c
        #basic/lecture12/sec02localVariable.c
        #basic/lecture12/sec03staticVariable.c
        #basic/lecture12/sec04registerVariable.c
        #basic/lecture12/sec05howToControlParameters.c
        #basic/lecture13/sec01multiArray1.c
        #basic/lecture13/sec01multiArray2.c
        #basic/lecture13/sec02pointeriArray1.c
        #basic/lecture13/sec02pointeriArray2.c
        #basic/lecture13/sec02pointeriArray3.c
        #basic/lecture13/sec02pointeriArray4.c
        #basic/lecture13/sec02pointeriArray5.c
        #basic/lecture13/sec02pointeriArray6.c
        #basic/lecture14/sec01dynamicMemFunc01.c
        #basic/lecture14/sec01dynamicMemFunc02.c
        #basic/lecture14/sec02dynamicMemStr02.c
        #basic/lecture15/sec01funcPointer1.c
        #basic/lecture15/sec01funcPointer2.c
        #basic/lecture15/sec01funcPointer3.c
        #basic/lecture15/sec01funcPointer4.c
        #basic/lecture16/sec01structure1.c
        #basic/lecture16/sec01structure2.c
        #basic/lecture16/sec01structure3.c
        #basic/lecture16/sec01structure4.c
        #basic/lecture16/sec01structure5.c
        #basic/lecture16/sec02structurePointer.c
        #basic/lecture17/sec01fileIO2.c
        #basic/lecture17/sec01fileIO3.c
        #basic/Chapter01/lecture17/sec01fileIO4.c
        #basic/Chapter02/lecture20/sec01ArrayList.c
        #basic/Chapter02/lecture20/sec02LinkedList1.c
        basic/Chapter02/lecture20/sec02LinkedList2.c
        )