cmake_minimum_required(VERSION 3.13)
project(basicStudyC)

set(CMAKE_CXX_STANDARD 14)

add_executable(basicStudyC
        #basic/lecture11/sec01strings1.c
        #basic/lecture11/sec01strings2.c
        #basic/lecture11/sec01strings3.c
        #basic/lecture11/sec01strings4.c
        #basic/lecture11/sec01strings5.c
        #basic/lecture12/sec01globalVariable.c
        #basic/lecture12/sec02localVariable.c
        #basic/lecture12/sec03staticVariable.c
        #basic/lecture12/sec04registerVariable.c
        #basic/lecture12/sec05howToControlParameters.c
        #basic/lecture13/sec01multiArray1.c
        #basic/lecture13/sec01multiArray2.c
        #basic/lecture13/sec02pointeriArray1.c
        #basic/lecture13/sec02pointeriArray2.c
        #basic/lecture13/sec02pointeriArray3.c
        #basic/lecture13/sec02pointeriArray4.c
        #basic/lecture13/sec02pointeriArray5.c
        #basic/lecture13/sec02pointeriArray6.c
        #basic/lecture14/sec01dynamicMemFunc01.c
        #basic/lecture14/sec01dynamicMemFunc02.c
        #basic/lecture14/sec02dynamicMemStr02.c
        #basic/lecture15/sec01funcPointer1.c
        #basic/lecture15/sec01funcPointer2.c
        #basic/lecture15/sec01funcPointer3.c
        #basic/lecture15/sec01funcPointer4.c
        #basic/lecture16/sec01structure1.c
        #basic/lecture16/sec01structure2.c
        #basic/lecture16/sec01structure3.c
        #basic/lecture16/sec01structure4.c
        #basic/lecture16/sec01structure5.c
        #basic/lecture16/sec02structurePointer.c
        #basic/lecture17/sec01fileIO2.c
        #basic/lecture17/sec01fileIO3.c
        #basic/Chapter01/lecture17/sec01fileIO4.c
        #basic/Chapter02/lecture20/sec01ArrayList.c
        #basic/Chapter02/lecture20/sec02LinkedList1.c
        #basic/Chapter02/lecture20/sec02LinkedList2.c
        #basic/Chapter02/lecture21/sec01twoWayLinkedList.c
        #basic/Chapter02/lecture22/sec01stack1.c
        #basic/Chapter02/lecture22/sec01stack2.c
        #basic/Chapter02/lecture23/sec01calculatorUseStack.c
        #basic/Chapter02/lecture24/sec01queue1.c
        #basic/Chapter02/lecture24/sec01queue2.c
        #basic/Chapter02/lecture25/sec01selectionSort.c
        #basic/Chapter02/lecture25/sec02insertionSort.c
        #basic/Chapter02/lecture26/sec01quickSort.c
        #basic/Chapter02/lecture28/sec01radixSort.c
        #basic/Chapter02/lecture30/sec02binaryTreeTraversal.c
        #basic/Chapter02/lecture31/sec01priorityQueue.c
        #basic/Chapter02/lecture32/sec01sequentialSearch.c
        #basic/Chapter02/lecture32/sec02binarySearch.c
        #basic/Chapter02/lecture33/sec01graph1.c
        #basic/Chapter02/lecture33/sec01graph2.c
        #basic/Chapter02/lecture34/sec01depthFirstSearch.c
        #basic/Chapter02/lecture35/sec01breadthFirstSearch.c
        #basic/Chapter02/lecture36/sec01binarySearch1.c
        basic/Chapter02/lecture36/sec01binarySearch2.c
        )